tests/fail/invalid_int.stderr
error: Undefined Behavior: using uninitialized data, but this operation requires initialized memory
  --> $DIR/invalid_int.rs:LL:CC
   |
LL |     let _x = i + 0;
   |              ^^^^^ using uninitialized data, but this operation requires initialized memory
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/invalid_int.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

